--- a/OnlineShop/src/templates/data.html
+++ b/OnlineShop/src/templates/data.html
@@ -1,5 +1,7 @@
 <div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
-	<div class="card" style="width: 14rem;">
+	<div class="card" style="width: 14rem;" data-category="bedroom" data-size="xxl"
+		 data-color="red"
+		 data-price="97" data-tag="fashion">
 		<div class="products-img-card_10  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -31,7 +33,9 @@
 	</div>
 </div>
 <div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
-	<div class="card" style="width: 14rem;">
+	<div class="card" style="width: 14rem;" data-category="sofa" data-size="l"
+		 data-color="blue"
+		 data-price="60" data-tag="clothes">
 		<div class="products-img-card_11  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -63,7 +67,9 @@
 	</div>
 </div>
 <div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
-	<div class="card" style="width: 14rem;">
+	<div class="card" style="width: 14rem;" data-category="furniture" data-size="xl"
+		 data-color="black"
+		 data-price="80" data-tag="handbag">
 		<div class="products-img-card_12  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -95,7 +101,9 @@
 	</div>
 </div>
 <div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
-	<div class="card" style="width: 14rem;">
+	<div class="card" style="width: 14rem;" data-category="sofa" data-size="s"
+		 data-color="yellow"
+		 data-price="30" data-tag="fashion">
 		<div class="products-img-card_13  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -127,7 +135,9 @@
 	</div>
 </div>
 <div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
-	<div class="card" style="width: 14rem;">
+	<div class="card" style="width: 14rem;" data-category="table" data-size="m"
+		 data-color="green"
+		 data-price="40" data-tag="women">
 		<div class="products-img-card_14  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -159,7 +169,9 @@
 	</div>
 </div>
 <div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
-	<div class="card" style="width: 14rem;">
+	<div class="card" style="width: 14rem;" data-category="sofa" data-size="s"
+		 data-color="yellow"
+		 data-price="70" data-tag="fashion">
 		<div class="products-img-card_15  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -191,7 +203,9 @@
 	</div>
 </div>
 <div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
-	<div class="card" style="width: 14rem;">
+	<div class="card" style="width: 14rem;" data-category="chair" data-size="m"
+		 data-color="green"
+		 data-price="30" data-tag="chair">
 		<div class="products-img-card_16  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -223,7 +237,9 @@
 	</div>
 </div>
 <div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
-	<div class="card" style="width: 14rem;">
+	<div class="card" style="width: 14rem;" data-category="table" data-size="xl"
+		 data-color="black"
+		 data-price="70" data-tag="table">
 		<div class="products-img-card_17  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -255,7 +271,9 @@
 	</div>
 </div>
 <div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
-	<div class="card" style="width: 14rem;">
+	<div class="card" style="width: 14rem;" data-category="sofa" data-size="l"
+		 data-color="yellow"
+		 data-price="40" data-tag="fashion">
 		<div class="products-img-card_18  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -287,7 +305,9 @@
 	</div>
 </div>
 <div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
-	<div class="card" style="width: 14rem;">
+	<div class="card" style="width: 14rem;" data-category="table" data-size="m"
+		 data-color="blue"
+		 data-price="55" data-tag="table">
 		<div class="products-img-card_19  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -319,7 +339,9 @@
 	</div>
 </div>
 <div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
-	<div class="card" style="width: 14rem;">
+	<div class="card" style="width: 14rem;" data-category="sofa" data-size="m"
+		 data-color="red"
+		 data-price="40" data-tag="fashion">
 		<div class="products-img-card_20  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
